@startuml

skinparam classAttributeIconSize 0

enum BotStrategyType {
  EASY
  HARD
}

interface ICommand {
  +Execute(room): error
}


class PlayCardCommand {
  -playerId: string
  -cardId: string
  +Execute(room): error
}

class ChangeBotStrategyCommand {
  -option: BotStrategyType
  +Execute(room): error
}

class Room

ICommand <|.. PlayCardCommand
ICommand <|.. ChangeBotStrategyCommand

PlayCardCommand -- Room
ChangeBotStrategyCommand -- Room

@enduml
